# FSignal

./: .gitignore  CMakeLists.txt  README.md  SConstruct  vcpkg.json
cmake/: FindFSignal.cmake
doc/: FConnectOption.md  FSignal0.md  FSignal1.md  FSlot0.md  FSlot1.md  index.md
include/: register_types.h
include/FSignal/: FSignal.h  FSlot.h
project/: icon.svg.import  project.godot
project/addon/: FSignal.gdextension
project/asset/icon/: icon.svg.import
project/source/: MainScene.gd  MainScene.tscn
src/: CMakeLists.txt  register_types.cpp
src/FSignal/: FSignal.cpp  FSignal.h  FSlot.cpp  FSlot.h
test/: CMakeLists.txt  Test.cpp  Test.h  register_types.cpp  test.cpp
